Fix line wrapping

--- a/src/components/accordion/Accordion.module.css
+++ b/src/components/accordion/Accordion.module.css
@@ -22,7 +22,7 @@
 .large-device-content {
   display: none
 }
-.hero-card-image-wrapper {
+.image-wrapper {
   width: 100%;
   height: 140px;
   display: grid;
@@ -31,7 +31,7 @@
 }
 
 @media only screen and (min-width: 575px) {
-  .hero-card-image-wrapper {
+  .image-wrapper {
     pointer-events: none;
     height: 188px;
   }
@@ -43,11 +43,11 @@
 @media only screen and (min-width: 1025px) {
   .container{
     display: grid;
-    grid-gap: 16px;
+    grid-gap: 20px;
     grid-auto-flow: column;
     grid-template-columns: 285px 1fr;
   }
-  .hero-card-image-wrapper {
+  .image-wrapper {
     width: 285px;
     height: 200px;
     display: grid;
