--- a/src/components/homePage/HeroCardAccordionItemContent.module.css
+++ b/src/components/homePage/HeroCardAccordionItemContent.module.css
@@ -7,6 +7,7 @@
   width: 100%;
   align-items: center;
   line-height: 24px;
+  white-space: nowrap;
 }
 .list-item:not(:first-child) {
     margin-top: 8px;
